[package]
name = "regicide-rl"
version = "0.1.3"
authors = ["askepen <aske@daske.dk>"]
edition = "2021"

[lib]
name = "regicide"
crate-type = ["cdylib"]

[profile.release]
debug = true

[dependencies]
rand = "0.8.5"
itertools = "0.10.3"
mcts = "0.3.0"
arrayvec = {git = "https://github.com/pYtoner/arrayvec/", features = ["copy"] }
pyo3 = { version = "0.16.4", features = ["extension-module"] }
colored = "2"

[package.metadata.maturin]
python-source = "regicide"

[build-dependencies]
pyo3-build-config = "0.16.4"

[features]
no-color = ["colored/no-color"]